--- a/frontend/projeto_integrador_frontend/src/pages/Inicio.css
+++ b/frontend/projeto_integrador_frontend/src/pages/Inicio.css
@@ -65,7 +65,7 @@ header nav button:nth-child(4) {
 }
 
 header nav button:nth-child(4):hover {
-  background-color: #dc2626;
+  background-color: #942323;
 }
 
 header nav > div {
