--- a/frontend/projeto_integrador_frontend/src/App.css
+++ b/frontend/projeto_integrador_frontend/src/App.css
@@ -1,8 +1,7 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
   text-align: center;
-  padding: 2rem;
+  max-width: 1700px;
+  padding: 10px;
 }
 
 .logo {
