--- a/frontend/projeto_integrador_frontend/src/index.css
+++ b/frontend/projeto_integrador_frontend/src/index.css
@@ -15,11 +15,10 @@ a {
   font-weight: 500;
   color: white;
   text-decoration: inherit;
+  padding: 5px;
 }
 
 body {
-  margin: 0;
-  display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
