dando continuidade ao frontend

--- a/frontend/projeto_integrador_frontend/src/pages/Inicio.css
+++ b/frontend/projeto_integrador_frontend/src/pages/Inicio.css
@@ -52,7 +52,7 @@ header nav button:hover {
   color: #1e40af;
 }
 
-header nav button:nth-child(4) {
+header nav button:nth-child(4),button:nth-child(5) {
   background-color: #ef4444;
   color: white;
   border-radius: 25px;
