--- a/frontend/projeto_integrador_frontend/src/pages/Inicio.css
+++ b/frontend/projeto_integrador_frontend/src/pages/Inicio.css
@@ -6,8 +6,11 @@
 }
 
 body {
-  font-family: 'Arial', sans-serif;
-  background-color: #f5f5f5;
+  text-align: center;
+  max-width: 100%;
+  max-height: 100%;
+  padding: 40px;
+  background-color: #d8f1fd;
 }
 
 /* Header */
@@ -18,6 +21,8 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border: 1px solid gray;
+  border-radius: 10px;
 }
 
 header > div:first-child {
@@ -89,7 +94,11 @@ section {
   grid-template-columns: 1fr 1fr;
   gap: 6rem;
   align-items: center;
-  margin-bottom: 4rem;
+  margin-bottom: 2rem;
+  margin-top: 1rem;
+  border: 1px solid gray;
+  border-radius: 10px;
+  height: 520px;
 }
 
 .intro .div_info_intro {
@@ -98,17 +107,18 @@ section {
   gap: 2rem;
   align-items: center;
   padding: 6rem;
-}
-
-.intro .div_info_intro img {
-  width: 270px;
-  height: auto;
+  margin-left: 10%;
+  width: 550px;
 }
 
 .intro .div_info_intro p {
   font-size: 23px;
-  font-weight: bold;
   color: #1e3a8a;
+  line-height: 1.3;
+}
+.intro .div_info_intro h1 {
+  font-weight: bold;
+  color: black;
   line-height: 1.3;
 }
 
@@ -137,7 +147,7 @@ section {
 
 .intro > div:last-child img {
   max-width: 100%;
-  height: auto;
+  height: 400px;
 }
 
 /* Info Cards */
@@ -151,7 +161,7 @@ section {
   background-color: white;
   padding: 1.5rem;
   border-radius: 10px;
-  border: 2px solid #e5e7eb;
+  border: 1px solid gray;
   display: flex;
   align-items: center;
   gap: 1rem;
@@ -176,7 +186,7 @@ section {
 }
 
 .info > div p {
-  color: #1f2937;
+  color: #335686;
   font-size: 1.2rem;
   font-weight: 700;
   line-height: 1.4;
