--- a/frontend/projeto_integrador_frontend/src/pages/Login.css
+++ b/frontend/projeto_integrador_frontend/src/pages/Login.css
@@ -1,77 +1,50 @@
-
-
-.main_login {
-    min-height: 100vh;
-    min-width: 1200px;
-    background-image: url('../assets/img_fundo_inicial.png');
-    background-size: cover;       /* cobre toda a tela */
-    background-repeat: no-repeat; /* não repete a imagem */
-    background-position: center;
-    margin:0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    }
-
-.login_page {
-    border: 1px solid grey;
-    background-color: white;
-    border-radius: 8px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    width: 400px;
-    padding: 30px;
-    position: relative;
+.overlay_click {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 900;
 }
 
-form {
+.login_modal {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+  color: rgb(29, 29, 121);
+  padding: 2rem;
+  border-radius: 8px;
+  z-index: 1000;
+  width: 35%;
+  height: 45%;
+}
+.forms-login {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    gap:3px;
+    padding: 20px;
+    width: 80%;
+    height: 70%;
 }
 
-.bt_sair{
-    position: absolute;
-    top: 5px;
-    right: 15px;
-    color: red;
-    font-size: 25px;
-    font-weight: bolder;
-    background-color: none;
-    cursor: pointer;
+.btn_fechar {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  font-size: 1.5rem;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  color: #dd1c1c;
 }
 
-span {
-    margin-bottom: 5px;
-    font-weight: bold;
-    color: #333;
-}
-
-input[type="text"],
-input[type="email"],
-input[type="password"] {
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 14px;
-    width: 100%;
-    
-}
-
-input[type="submit"] {
-    background-color: #007bff;
-    color: white;
-    border: none;
-    padding: 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s;
-    width: 100%;
-}
-
-input[type="submit"]:hover {
-    background-color: #0056b3;
+.bt_enviar{
+    margin-top: 15px;
+    background-color: rgb(247, 207, 78);
+    color: black;
 }
