--- a/frontend/projeto_integrador_frontend/src/pages/Inicio.css
+++ b/frontend/projeto_integrador_frontend/src/pages/Inicio.css
@@ -106,32 +106,34 @@ section {
   flex-direction: column;
   gap: 2rem;
   align-items: center;
-  padding: 6rem;
+  padding: 4rem;
   margin-left: 10%;
-  width: 550px;
+  width: 580px;
+  height: 100%;
 }
 
 .intro .div_info_intro p {
-  font-size: 23px;
+  font-size: 28px;
   color: #1e3a8a;
   line-height: 1.3;
 }
 .intro .div_info_intro h1 {
+  font-size: 60px;
   font-weight: bold;
-  color: black;
+  color: #061541;
   line-height: 1.3;
 }
 
 .intro button {
-  background-color: #ef4444;
+  background-color: #db2d2d;
   color: white;
   border: none;
-  padding: 1rem 2rem;
+  padding: 1rem 1rem;
   border-radius: 30px;
-  font-size: 1.1rem;
+  font-size: 1.3rem;
   font-weight: 600;
   cursor: pointer;
-  width: fit-content;
+  width: 50%;
   transition: background-color 0.3s;
 }
 
@@ -164,14 +166,23 @@ section {
   border: 1px solid gray;
   display: flex;
   align-items: center;
+  flex-direction: column;
   gap: 1rem;
   transition: border-color 0.3s, transform 0.3s;
   cursor: pointer;
+  height: 180px;
 }
 
 .info > div:hover {
   border-color: grey;
   transform: translateY(-5px);
+}
+
+.info-titulo {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 90%;
 }
 
 .info > div span {
@@ -185,9 +196,14 @@ section {
   flex-shrink: 0;
 }
 
-.info > div p {
+.info > div h2 {
   color: #335686;
-  font-size: 1.2rem;
+  font-size: 25px;
   font-weight: 700;
-  line-height: 1.4;
+}
+
+.info-detalhe {
+  color: rgb(41, 41, 41);
+  width: 90%;
+  font-size: 18px;
 }
