--- a/frontend/projeto_integrador_frontend/src/pages/Inicio.css
+++ b/frontend/projeto_integrador_frontend/src/pages/Inicio.css
@@ -21,7 +21,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid gray;
+  border: 1px solid rgb(196, 196, 196);
   border-radius: 10px;
 }
 
@@ -96,7 +96,6 @@ section {
   align-items: center;
   margin-bottom: 2rem;
   margin-top: 1rem;
-  border: 1px solid gray;
   border-radius: 10px;
   height: 520px;
 }
@@ -105,10 +104,10 @@ section {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  align-items: center;
+  align-items: start;
   padding: 4rem;
   margin-left: 10%;
-  width: 580px;
+  width: 100%;
   height: 100%;
 }
 
@@ -122,6 +121,8 @@ section {
   font-weight: bold;
   color: #061541;
   line-height: 1.3;
+  text-align: start;
+
 }
 
 .intro button {
@@ -163,7 +164,6 @@ section {
   background-color: white;
   padding: 1.5rem;
   border-radius: 10px;
-  border: 1px solid gray;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -182,7 +182,8 @@ section {
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 90%;
+  justify-content: left;
+  width: 100%;
 }
 
 .info > div span {
@@ -196,10 +197,17 @@ section {
   flex-shrink: 0;
 }
 
+div span > img{
+  height: 100%;
+  width: 100%;
+  left: -15%;
+}
+
 .info > div h2 {
   color: #335686;
-  font-size: 25px;
+  font-size: 23px;
   font-weight: 700;
+  margin-left: 20px;
 }
 
 .info-detalhe {
