--- a/frontend/projeto_integrador_frontend/src/pages/Inicio.css
+++ b/frontend/projeto_integrador_frontend/src/pages/Inicio.css
@@ -89,7 +89,10 @@ section {
 
 /* Intro - Hero Section */
 .intro {
-  background-color: white;
+  background-image: url(../assets/img_intro_XPENEM.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 6rem;
