--- a/frontend/projeto_integrador_frontend/src/pages/Inicio.css
+++ b/frontend/projeto_integrador_frontend/src/pages/Inicio.css
@@ -9,7 +9,7 @@ body {
   text-align: center;
   max-width: 100%;
   max-height: 100%;
-  padding: 40px;
+  padding: 15px;
   background-color: #d8f1fd;
 }
 
@@ -17,12 +17,16 @@ body {
 header {
   background-color: #ffffff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 1rem 2rem;
+  padding: 5px 2rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
   border: 1px solid rgb(196, 196, 196);
   border-radius: 10px;
+}
+
+.img-logo img{
+  width: 200px;
 }
 
 header > div:first-child {
@@ -37,7 +41,7 @@ header nav {
   gap: 2rem;
 }
 
-header nav button {
+header nav .button-menu {
   background: none;
   border: none;
   color: #374151;
@@ -48,12 +52,12 @@ header nav button {
   transition: color 0.3s;
 }
 
-header nav button:first-child {
+header nav .button-menu:first-child {
   color: #1e40af;
   border-bottom: 2px solid #1e40af;
 }
 
-header nav button:hover {
+header nav .button-menu:hover {
   color: #1e40af;
 }
 
@@ -68,7 +72,7 @@ header nav button:nth-child(4):hover {
   background-color: #942323;
 }
 
-header nav > div {
+header nav > .icon-perfil {
   width: 40px;
   height: 40px;
   background-color: #60a5fa;
@@ -100,25 +104,25 @@ section {
   margin-bottom: 2rem;
   margin-top: 1rem;
   border-radius: 10px;
-  height: 520px;
+  height: 450px;
 }
 
 .intro .div_info_intro {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
   gap: 2rem;
-  align-items: start;
-  padding: 4rem;
+  padding: 3rem;
   margin-left: 10%;
-  width: 100%;
   height: 100%;
-
+  text-align: left;
 }
 
 .intro .div_info_intro p {
   font-size: 23px;
   color: #1e3a8a;
-
+  align-self: flex-start;
 }
 .intro .div_info_intro h1 {
   font-size: 60px;
@@ -126,7 +130,6 @@ section {
   color: #061541;
   line-height: 1.3;
   text-align: start;
-
 }
 
 .intro button {
@@ -140,6 +143,7 @@ section {
   cursor: pointer;
   width: 40%;
   transition: background-color 0.3s;
+  align-self: flex-start;
 }
 
 .intro button:hover {
@@ -150,11 +154,6 @@ section {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.intro > div:last-child img {
-  max-width: 100%;
-  height: 500px;
 }
 
 /* Info Cards */
