--- a/frontend/projeto_integrador_frontend/src/pages/Inicio.css
+++ b/frontend/projeto_integrador_frontend/src/pages/Inicio.css
@@ -23,6 +23,7 @@ header {
   align-items: center;
   border: 1px solid rgb(196, 196, 196);
   border-radius: 10px;
+  width: 95vw;
 }
 
 .img-logo img{
@@ -88,7 +89,7 @@ header nav > .icon-perfil {
 section {
   margin: 0 auto;
   padding-top: 1rem;
-  width: 100%;
+  width: 95vw;
 }
 
 /* Intro - Hero Section */
@@ -178,6 +179,7 @@ section {
 
 .info > div:hover {
   border-color: grey;
+  border: 2px solid rgb(218, 218, 218);
   transform: translateY(-5px);
 }
 
