--- a/frontend/projeto_integrador_frontend/src/pages/ModalQuiz.css
+++ b/frontend/projeto_integrador_frontend/src/pages/ModalQuiz.css
@@ -1,10 +1,12 @@
 /* ======= OVERLAY ======= */
-.modalQuiz-overlay {
+
+.modalQuiz-body {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: auto;
+  min-height: 100%;
   background-color: #d8f1fd;
   display: flex;
   flex-direction: column;
@@ -12,12 +14,25 @@
   padding-top: 20px;
   z-index: 9000;
 }
+.modalQuiz-overlay {
+
+  width: 100%;
+  height: 100%;
+  background-color: #d8f1fd;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  max-width: 95%;
+  margin: 0 auto;
+  padding: 15px;
+}
 
 /* === CARD PRINCIPAL === */
 .modalQuiz-card {
   margin-top: 50px;
   width: 90%;
-  max-width: 650px;
+  max-width: 670px;
   background: #fff;
   border-radius: 14px;
   padding: 25px 30px;
@@ -68,6 +83,15 @@
   margin-bottom: 25px;
   line-height: 1.4;
   text-align: justify;
+}
+
+.modalQuiz-image {
+  width: 100%;
+  max-width: 380px;
+  margin: 16px auto;
+  display: block;
+  border-radius: 8px;
+  box-shadow: 0px 2px 10px rgba(0,0,0,0.15);
 }
 
 /* === FORM === */
@@ -169,7 +193,7 @@
 }
 .quiz-tempo {
     position: absolute;
-    bottom: 4%;
+    bottom: 25px;
     left: 5%;
     margin-top: 18px;
     font-size: 17px;
@@ -185,16 +209,18 @@
     left: 0;
     width: 100%;
     height: 100%;
+    overflow-y: hidden;
     background: rgba(0, 0, 0, 0.45);
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     z-index: 9999;
     animation: fadeIn 0.3s ease;
 }
 
 /* Card branco central */
 .quizComecar-card {
+    margin-top: 20%;
     background: #ffffff;
     padding: 30px;
     width: 320px;
