--- a/frontend/projeto_integrador_frontend/src/pages/Login.css
+++ b/frontend/projeto_integrador_frontend/src/pages/Login.css
@@ -6,6 +6,7 @@
   height: 100%;
   background-color: rgba(0,0,0,0.5);
   z-index: 900;
+  backdrop-filter: blur(3px);
 }
 
 .login_modal {
@@ -25,18 +26,25 @@
   height: 45%;
 }
 .forms-login {
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    width: 80%;
-    height: 70%;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  width: 80%;
+  height: 70%;
+}
+
+.forms-login input {
+  border: 1px solid gray;
+  padding: 10px;
+  border-radius: 10px;
+  margin: 5px;
 }
 
 .btn_fechar {
   position: absolute;
   top: 10px;
   right: 15px;
-  font-size: 1.5rem;
+  font-size: 2rem;
   background: transparent;
   border: none;
   cursor: pointer;
@@ -44,9 +52,10 @@
 }
 
 .bt_enviar{
-    margin-top: 15px;
-    background-color: rgb(247, 207, 78);
-    color: black;
+  margin-top: 15px;
+  background-color: rgb(247, 207, 78);
+  color: black;
+  border: none;
 }
 
 .cadastro_link a{
