--- a/frontend/projeto_integrador_frontend/src/pages/Login.css
+++ b/frontend/projeto_integrador_frontend/src/pages/Login.css
@@ -56,8 +56,21 @@
   background-color: rgb(247, 207, 78);
   color: black;
   border: none;
+  border-radius: 10px;
+  margin: 5px;
 }
 
-.cadastro_link a{
+.cadastro_link{
   color: black;
+  margin: 10px;
+  margin-top: 3%;
+}
+
+.cadastro_link a {
+  color: rgb(100, 100, 255);
+}
+
+.msg-erro-login {
+  color: #dd1c1c;
+  margin: 10px;
 }
